Fixed top menu z-index.

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -75,6 +75,7 @@ html, body {
         top: 0;
         right: 0;
         left: 0;
+        z-index: 1;
     }
 }
 
